--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Shang-Ling (Kate) Hsu"
   pronouns         : # example: "she/her"  
   bio              : "Computer Science PhD Student"
-  location         : "Los Angeles, CA"
+  location         : #"Los Angeles, CA"
   employer         : "University of Southern California"
   uri              : # URL
   email            : "hsushang@usc.edu" 
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/kate-shang-ling-hsu/"
+  linkedin         : "kate-shang-ling-hsu"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
